Update README.md
Added useful launch instructions.