@@ -1,8 +1,9 @@
 # RescueBulletin
 
 ## Installation
-This program requires Java 11. Download the latest JDK or a JRE that supports Java 11.
-Run it through a JDK. The best of my googling suggests the JavaFX packaging tool has not been supported for years and no longer works with current versions.
+This program requires Java 11. Download the latest JDK or a JRE that supports Java 11. Run the following command in the command prompt to launch, changing parts in parentheses to match your installation.
+
+java --module-path "C:\Program Files\Java\javafx-sdk-(version)\lib" --add-modules javafx.controls,javafx.fxml -jar C:\(path)\RescueBulletin.jar
 
 ## Features
 * Ability to edit and randomize PMD: Red Rescue Team (US/Aus)
